swagger support for config recommendation
