# routes/kepler_api.py
@@ -6,6 +6,7 @@ from appManagement import session as sess
 import argparse
 import os
 from werkzeug.utils import secure_filename
+from appManagement import configMgr as cmgr
 
 from validate_email import validate_email
 
@@ -30,24 +31,32 @@ BOOK_REQUESTS = {
     }
 }
 
+@KEPLER_API.route('/v1/configuration', methods=['GET'])
+def get_configurations():
+    """Return all loaded configurations
+    @return: 200: an array of all configurations as a \
+    flask/response object with application/json mimetype.
+    """
+    return jsonify(current_app.appMethods.listUploadedConfigurations())
+
 @KEPLER_API.route('/v1/session', methods=['POST'])
 def get_session():
     """Creates and returns a unique session identifier
     @return: 200: a UUID identifying the session handle
     """    
-    sessionObj = sess.Session(None,None,None)
+    newConfigMgr = cmgr.ConfigMgr(os.getcwd()+current_app.config['UPLOAD_FOLDER'])
+    sessionObj = sess.Session(newConfigMgr)
     sid = sessionObj.getNewSID()
-    current_app.sessions.append(sid)
+    current_app.sessions[sid] = sessionObj
     return jsonify(sid)
 
 @KEPLER_API.route('/v1/session', methods=['GET'])
 def get_sessions():
-    """Return all book requests
+    """Return all active sessions
     @return: 200: an array of all sessions as a \
     flask/response object with application/json mimetype.
     """
     return jsonify(current_app.sessions)
-
 
 @KEPLER_API.route('/v1/request/<string:_id>', methods=['GET'])
 def get_record_by_id(_id):
@@ -61,6 +70,49 @@ def get_record_by_id(_id):
         abort(404)
     return jsonify(BOOK_REQUESTS[_id])
 
+
+
+@KEPLER_API.route('/v1/loadAndParseConfig', methods=['POST'])
+def loadAndParseConfig():
+    """Load and parse a recommender config
+    @param sessionId: post : a valid session identifier
+    @param configFilename: post : the name of the configuration file to load and parse
+    @return: 201: the parse output as a flask/response object \
+    with application/json mimetype.
+    @raise 400: misunderstood request
+    """
+    if not request.get_json():
+        abort(400)
+    data = request.get_json(force=True)
+
+    if not data.get('filename'):
+        abort(400)
+    if not data.get('sessionId'):
+        abort(400)
+
+    response = current_app.appMethods.loadAndParseInSession(data['sessionId'], data['filename'])
+    return response
+
+@KEPLER_API.route('/v1/configRecommend', methods=['POST'])
+def configRecommend():
+    """Load and parse a recommender config
+    @param sessionId: post : a valid session identifier
+    @param prompt: post : the user specified text on which to base recommendations
+    @return: 201: the parse output as a flask/response object \
+    with application/json mimetype.
+    @raise 400: misunderstood request
+    """
+    if not request.get_json():
+        abort(400)
+    data = request.get_json(force=True)
+
+    if not data.get('prompt'):
+        abort(400)
+    if not data.get('sessionId'):
+        abort(400)
+
+    response = current_app.appMethods.configRecommend(data['sessionId'], data['prompt'])
+    return response
 
 @KEPLER_API.route('/v1/request', methods=['POST'])
 def create_record():
